# artificial_brains_sdk_py

./: .gitignore  README.md  pyproject.toml  requirements.txt
ab_sdk/: __init__.py  client.py  config.py  contract_scaffold.py  decoder.py  encoder.py  endpoints.py  input_streamer.py  node_client.py  output_stream.py  python_client.py  robot_loop.py  run_session.py  session.py
ab_sdk/maps/: __init__.py  input_sensor_map.py  output_motor_map.py  reward_map.py
ab_sdk/plugins/: __init__.py  decoder.py  deviation.py  reward.py
ab_sdk/utils/: astro.py  feedback.py
